src-tauri/check_output_7.txt
    Blocking waiting for file lock on package cache
   Compiling portable-atomic v1.12.0
    Checking dirs-sys-next v0.1.2
    Checking plotters-backend v0.3.7
    Checking jpeg-decoder v0.3.2
    Checking gif v0.12.0
    Checking console v0.15.11
    Checking is-terminal v0.4.17
    Checking number_prefix v0.4.0
    Checking dirs-next v2.0.0
    Checking encode_unicode v1.0.0
    Checking ttf-parser v0.20.0
    Checking term v0.7.0
    Checking plotters-svg v0.3.7
    Checking prettytable v0.10.0
    Checking image v0.24.9
    Checking spin v0.9.8
    Checking indicatif v0.17.11
    Checking plotters-bitmap v0.3.7
    Checking cubecl-common v0.3.0
    Checking plotters v0.3.7
    Checking cubecl-runtime v0.3.0
    Checking burn-common v0.15.0
    Checking cubecl-core v0.3.0
    Checking cubecl-wgpu v0.3.0
    Checking cubecl-linalg v0.3.0
    Checking cubecl v0.3.0
    Checking burn-tensor v0.15.0
    Checking burn-fusion v0.15.0
    Checking burn-autodiff v0.15.0
    Checking burn-ndarray v0.15.0
    Checking burn-jit v0.15.0
    Checking burn-wgpu v0.15.0
    Checking burn-core v0.15.0
error[E0425]: cannot find function `decode_borrowed_from_slice` in module `bincode::serde`
  --> /Users/mugisus/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/burn-core-0.15.0/src/record/memory.rs:39:37
   |
39 |         let state = bincode::serde::decode_borrowed_from_slice(&args, bin_config()).unwrap();
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in `bincode::serde`

For more information about this error, try `rustc --explain E0425`.
error: could not compile `burn-core` (lib) due to 1 previous error
